--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -484,6 +484,18 @@
                 <target>Preis</target>
             </trans-unit>
 
+            <trans-unit id="tx_cart.error.coupon.not_accepted">
+                <source>Coupon code is not accepted.</source>
+                <target>Gutscheincode wurde nicht akzeptiert.</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.error.coupon.already_added">
+                <source>Coupon code has already been added.</source>
+                <target>Gutscheincode wurde schon hinzugefügt.</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.error.coupon.not_combinable">
+                <source>Coupon codes can not be combined.</source>
+                <target>Gutscheincodes sind nicht kombinierbar.</target>
+            </trans-unit>
 
         </body>
     </file>
