--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -610,6 +610,9 @@
             <trans-unit id="tx_cart_domain_model_product_product.stock">
                 <source>Stock</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.tags">
+                <source>Tags</source>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_product_taxclass">
                 <source>Tax Class</source>
@@ -711,6 +714,13 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_specialprice.price">
                 <source>Price</source>
+            </trans-unit>
+
+            <trans-unit id="tx_cart_domain_model_product_tag">
+                <source>Tag</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_tag.title">
+                <source>Title</source>
             </trans-unit>
         </body>
     </file>
