[TASK] - add miniCart default template

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -12,6 +12,10 @@
                 <source>Go to shopping cart.</source>
                 <target>Gehe zum Warenkorb.</target>
             </trans-unit>
+            <trans-unit id="tx_cart.plugin.mini_cart.products_in_cart">
+                <source>%s products in cart.</source>
+                <target>%s Artikel im Warenkorb.</target>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_order_product.title">
                 <source>Product</source>
