--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -446,6 +446,9 @@
             <trans-unit id="tx_cart.plugin.products.action.product.list.select.page">
                 <source>Choose detail page</source>
             </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.subcategories">
+                <source>List subcategories</source>
+            </trans-unit>
             <trans-unit id="tx_cart.plugin.products.action.product.teaser.select.product">
                 <source>Choose teaser product</source>
             </trans-unit>
