--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -9,8 +9,8 @@
                 <target>Der Warenkorb ist leer.</target>
             </trans-unit>
             <trans-unit id="tx_cart.plugin.mini_cart.go_to_cart_page">
-                <source>Go to shopping cart.</source>
-                <target>Gehe zum Warenkorb.</target>
+                <source>Go to Checkout</source>
+                <target>Weiter zur Kasse</target>
             </trans-unit>
             <trans-unit id="tx_cart.plugin.mini_cart.products_in_cart">
                 <source>products in cart.</source>
