--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -606,9 +606,45 @@
                 <source>Choose detail page</source>
                 <target>Detailseite auswählen</target>
             </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy">
+                <source>Sort by</source>
+                <target>Sortieren nach</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy.uid">
+                <source>Uid</source>
+                <target>Uid</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy.tstamp">
+                <source>Last edited</source>
+                <target>Zuletzt geändert</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy.crdate">
+                <source>Created</source>
+                <target>Erstellt</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy.title">
+                <source>Title</source>
+                <target>Titel</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderDirection">
+                <source>Sort direction</source>
+                <target>Sortierreihenfolge</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderDirection.asc">
+                <source>Ascending</source>
+                <target>Aufsteigend</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.orderDirection.desc">
+                <source>Descending</source>
+                <target>Absteigend</target>
+            </trans-unit>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.categories">
+                <source>Categories</source>
+                <target>Kategorie</target>
+            </trans-unit>
             <trans-unit id="tx_cart.plugin.products.action.product.list.subcategories">
-                <source>List subcategories</source>
-                <target>Unterkategorien anzeigen</target>
+                <source>Subcategories</source>
+                <target>Unterkategorien</target>
             </trans-unit>
             <trans-unit id="tx_cart.plugin.products.action.product.show.addToCartByAjax">
                 <source>Add to cart by Ajax-Request</source>
