--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -470,8 +470,8 @@
             <trans-unit id="tx_cart.plugin.products.action.product.teaser">
                 <source>Product - Teaser View</source>
             </trans-unit>
-            <trans-unit id="tx_cart.plugin.products.action.product.list.select.page">
-                <source>Choose detail page</source>
+            <trans-unit id="tx_cart.plugin.products.action.product.list.select.single_pid">
+                <source>Product Detail Page</source>
             </trans-unit>
             <trans-unit id="tx_cart.plugin.products.action.product.list.orderBy">
                 <source>Sort by</source>
@@ -789,6 +789,13 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_tag.title">
                 <source>Title</source>
+            </trans-unit>
+
+            <trans-unit id="tx_cart_domain_model_category.cart_product_image">
+                <source>Cart: Product Category Image</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_category.cart_product_single_pid">
+                <source>Cart: Product Detail Page</source>
             </trans-unit>
         </body>
     </file>
