[TASK] add start and end to coupon availibility and increase number of coupon usage on order

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -568,6 +568,10 @@
                 <source>Is Combinable with other Coupons</source>
                 <target>Kombinierbar mit anderen Coupons</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_coupon.handle_available">
+                <source>Handle number coupons availability</source>
+                <target>Anzahl verfügbarer Coupons verwalten</target>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_coupon.number_available">
                 <source>Number of Coupons available</source>
                 <target>Anzahl der verfügbaren Coupons</target>
