--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -110,6 +110,14 @@
                 <source>Service- and Shipping costs (gross)</source>
                 <target>Service- und Versandkosten (brutto)</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.coupon_net">
+                <source>Discount (net)</source>
+                <target>Rabatt (netto)</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.coupon_gross">
+                <source>Discount (gross)</source>
+                <target>Rabatt (brutto)</target>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_order_item.order_number">
                 <source>Order Number</source>
